escolha-font-style-e-esboco-jogo-da-velha

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./src/styles/reset.css" />
     <link rel="stylesheet" href="./src/styles/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Love+Light&family=Black+And+White+Picture"
+      rel="stylesheet"
+    />
 
     <title>Cat And Rat</title>
   </head>
@@ -33,7 +39,11 @@
         </div>
         <div id="game-principal" class="jogo-da-velha">
           <h3 id="name-game">Título do Jogo</h3>
-          <button id="criar-grid" type="button">Criar</button>
+          <iframe
+            src="./games/jogoDaVelha.html"
+            width="100%"
+            height="100%"
+          ></iframe>
         </div>
         <div class="inferior">
           <div class="other-game" id="game04">outro jogo :D</div>
