--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <div class="other-game" id="game02">Jo-ken-po</div>
           <div class="other-game" id="game03">outro jogo :D</div>
         </div>
-        <div id="game-principal" class="jogo-da-velha">
+        <div id="game-principal">
           <h3 id="name-game">Título do Jogo</h3>
           <iframe
             src="./games/jogoDaVelha.html"
