--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       href="https://fonts.googleapis.com/css2?family=Love+Light&family=Black+And+White+Picture"
       rel="stylesheet"
     />
-
     <title>Cat And Rat</title>
   </head>
   <body>
@@ -32,22 +31,23 @@
     </header>
     <div class="principal">
       <div class="menu-games">
-        <div class="superior">
-          <div class="other-game" id="game01">Jogo da Memoria</div>
-          <div class="other-game" id="game02">Jo-ken-po</div>
+        <div class="coluna-esquerda">
+          <div class="other-game" id="jogo-memoria">Jogo da Memoria</div>
+          <div class="other-game" id="jogo-jokenpo">Jo-ken-po</div>
           <div class="other-game" id="game03">outro jogo :D</div>
         </div>
         <div id="game-principal">
           <h3 id="name-game">Título do Jogo</h3>
           <iframe
+            id="frame-game"
             src="./games/jogoDaVelha.html"
             width="100%"
             height="100%"
           ></iframe>
         </div>
-        <div class="inferior">
+        <div class="coluna-esquerda">
           <div class="other-game" id="game04">outro jogo :D</div>
-          <div class="other-game" id="game05">Jogo da Velha</div>
+          <div class="other-game" id="jogo-da-velha">Jogo da Velha</div>
           <div class="other-game" id="game06">outro jogo :D</div>
         </div>
       </div>
